src/test/deca/context/invalid/renduInitial/08implicitFloat2Int.res
/user/1/.base/lennea/home/Projet_GL/src/test/deca/context/invalid/renduInitial/08implicitFloat2Int.deca:3:16: null
